styles.css
body {
  margin: 0;
  font-family: 'Source Sans Pro', sans-serif;
  background-color: #fff;
  color: #333;
  text-align: left;
}

a {
  color: white;
  text-decoration: none;
  font-weight: 500;
}

a:hover {
  text-decoration: underline;
}

/* Top red nav bar */
.main-header {
  background-color: #df1b12;
  display: flex;
/*   justify-content: space-between; */
/*   align-items: center; */
  text-align: center;
  padding: 10px 20px;
}

.main-header a {
  margin-left: 20px;
}

/* White background logo header */
.logo-header {
  background-color: white;
  padding: 10px 0;
  text-align: center;
  padding-left: 10px;
}

.logo {
  height: 400px;
}

/* Main layout */
main {
  max-width: 900px;
  margin: 40px auto;
  padding: 0 20px;
}

/* Section titles */
h2 {
  margin-top: 40px;
  color: #df1b12;
}

/* Partner logos */
.partner-logos {
  display: flex;
  gap: 30px;
  align-items: center;
  justify-content: flex-start;
  flex-wrap: wrap;
  margin-top: 20px;
}

.partnerlogo {
  height: 80px;
}

.misclogo {
  height: 200px;
}

/* Footer */
footer {
  text-align: center;
  padding: 20px;
  font-size: 0.9em;
  color: #666;
  margin-top: 60px;
}

